[gd_scene load_steps=5 format=3 uid="uid://c84xdhbgo476o"]

[ext_resource type="Script" uid="uid://bdqka8eqwhokb" path="res://scripts/entities/asteroid.gd" id="1_f0t3v"]
[ext_resource type="PackedScene" uid="uid://cbc65b3whv5wm" path="res://scenes/entities/explosion.tscn" id="2_x1581"]
[ext_resource type="Texture2D" uid="uid://byhekra7l3t83" path="res://assets/sprites/entities/asteroid-1.png" id="3_0pisa"]

[sub_resource type="CircleShape2D" id="CircleShape2D_rl7de"]
resource_local_to_scene = true
radius = 16.0312

[node name="BigAsteroid" type="Area2D" groups=["obstacles"]]
scale = Vector2(2.5, 2.5)
collision_layer = 4
collision_mask = 3
script = ExtResource("1_f0t3v")
speed = 300
points = 25

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_rl7de")

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]
visible = false

[node name="explosion" parent="." instance=ExtResource("2_x1581")]
visible = false

[node name="Sprite" type="Sprite2D" parent="."]
texture = ExtResource("3_0pisa")

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
